modified some files

--- a/HTML_CSS/home.html
+++ b/HTML_CSS/home.html
@@ -26,6 +26,29 @@
             <h2>our new menu</h2>
             <p>We've updated the menu babyyyysdjh Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum dolor necessitatibus iure illo voluptatum earum accusantium obcaecati nobis laboriosam quis saepe minima expedita, praesentium ut laudantium, totam suscipit corrupti dicta?</p>
         </article>
+        <FORm action="example.com" method="post">
+        <input type="checkbox" id="dog" name="dog" value="Dog">
+        <label for="dog">I like dogs</label>
+        <input type="checkbox" id="cat" name="cat" value="Cat">
+        <label for="cat">I like cats</label>
+        <br>
+        <button onclick="alert('Are you sure you want to continue?')"> 
+            <img src="https://yourserver.com/button_img.jpg" 
+                alt="Submit the form" height="64" width="64">
+        </button> <br>
+        <input type="radio" id="light" name="theme" value="Light"> 
+        <label for="light">Light</label> 
+        <input type="radio" id="dark" name="theme" value="Dark"> 
+        <label for="dark">Dark</label> 
+        <br> <br> <br> 
+        <label for="pwd">Password:</label> 
+        <input type="password" id="pwd" name="pwd"> 
+        <input type="submit" value="submit" onclick="alert('Are you sure you want to continue?')">
+        <br> <span for="dob">Date of birth:</span>
+        <input type="date" id="dob" name="date of birth">
+        <textarea name="response" rows="10" cols="30" maxlength=”200”> 
+        </textarea> 
+    </FORm>
     </main>
     <footer>
         <p>Copyright Little Lemon</p>
